--- a/src/main/webapp/assets/style.css
+++ b/src/main/webapp/assets/style.css
@@ -3,10 +3,27 @@ body, * {
   box-sizing: border-box;
 }
 
-.container {
-  max-width: 1000px;
+.parent {
+  display: flex;
   margin: 0 auto;
-  width: 80%;
+  max-width: 1340px;
+}
+
+.chessboard {
+  min-width: 640px;
+  width: 640px;
+  height: 640px;
+  margin: 5px;
+  outline: 1px solid #333;
+}
+
+.container {
+  max-width: 700px;
+  width: 100%;
+}
+
+.white:hover:not(:empty), .black:hover:not(:empty) {
+  background: #1c82dd;
 }
 
 input[type=text] {
@@ -107,12 +124,6 @@ hr {
   padding: 0;
 }
 
-.chessboard {
-  width: 640px;
-  height: 640px;
-  margin: 5px;
-  border: 0px solid #333;
-}
 .black {
   float: left;
   width: 80px;
