--- a/src/main/webapp/assets/tables.css
+++ b/src/main/webapp/assets/tables.css
@@ -41,9 +41,9 @@ a.button {
     color: #555;
     display: inline-block;
     font: bold 12px Arial, Helvetica, Clean, sans-serif;
-    margin: 0 25px 25px 0;
+    margin: 25px 25px 0 25px;
     padding: 10px 20px;
-    position: relative;
+    position: absolute;
     text-align: center;
     text-decoration: none;
     text-shadow: 0 1px 0 #fafafa;
@@ -66,18 +66,15 @@ a.button:active {
     background: linear-gradient(#dfdfdf, #e3e3e3);
     border: solid 1px #959595;
     box-shadow: inset 0 10px 15px 0 #c4c4c4;
-    top: 2px;
 }
 
 /**
  * Table
  */
 
-div.background {
-    height: 200px;
-    width: 80%;
-    -moz-box-shadow: inset 0 0 0 1px #63ad0d;
-    -webkit-box-shadow: inset 0 0 0 1px #63ad0d;
+.oneTable {
+    height: 34px;
+    width: 780px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     background: #eee;
@@ -85,18 +82,33 @@ div.background {
     background: -moz-linear-gradient(#eee, #e2e2e2);
     background: linear-gradient(#eee, #e2e2e2);
     border: solid 1px #d0d0d0;
-    border-bottom: solid 3px #b2b1b1;
     border-radius: 3px;
-    box-shadow: inset 0 0 0 1px #f5f5f5;
     color: #555;
-    display: table-cell;
+    display: inline-block;
     font: bold 12px Arial, Helvetica, Clean, sans-serif;
-    margin: 0 25px 25px 0;
-    padding: 10px 20px;
+    margin: 10px 0 0 0;
     position: relative;
     text-align: center;
     text-decoration: none;
     text-shadow: 0 1px 0 #fafafa;
+}
+
+div.background {
+    height: 400px;
+    width: 800px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: #eee;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#eee), to(#e2e2e2));
+    background: -moz-linear-gradient(#eee, #e2e2e2);
+    background: linear-gradient(#eee, #e2e2e2);
+    border: solid 1px #d0d0d0;
+    border-radius: 3px;
+    color: #555;
+    display: table-cell;
+    margin: 0 25px 0 25px;
+    position: relative;
+    text-align: center;
 }
 
 .rTable {
